test/libsolidity/syntaxTests/abiEncoder/conflicting_settings.sol
pragma abicoder               v2;
pragma abicoder v1;
// ----
// SyntaxError 3845: (34-53='pragma abicoder v1;'): ABI coder has already been selected for this source unit.
